tests/wrong-num-ty-args/out.txt
error: mismatched number of type arguments: expected 1, found 2
  ┌─ err.sml:1:8
  │
1 │ val _: (int, bool) list = []
  │        ^^^^^^^^^^^^^^^^

typechecking failed
